// ============================================================
//  VIEWFLIX - movie & series streaming platform
//  ER schema (DBML for dbdiagram.io) - 11 tables, 3NF
//  Usage: paste this file into https://dbdiagram.io
// ============================================================

Table users {
  user_id        int [pk, increment]
  email          varchar(120) [not null, unique]
  password_hash  varchar(255) [not null]
  first_name     varchar(50)  [not null]
  last_name      varchar(50)  [not null]
  birth_date     date
  country        varchar(50)
  phone          varchar(20)
  created_at     datetime [not null]
  account_status varchar(15) [not null, note: "Active / Suspended / Cancelled"]
}

Table subscription_plans {
  plan_id        int [pk, increment]
  plan_name      varchar(30) [not null, unique]
  monthly_price  decimal(6,2) [not null]
  max_resolution varchar(10) [not null]
  max_screens    int [not null]
  description    varchar(200)
}

Table subscriptions {
  subscription_id int [pk, increment]
  user_id         int [not null, ref: > users.user_id]
  plan_id         int [not null, ref: > subscription_plans.plan_id]
  start_date      date [not null]
  end_date        date
  status          varchar(15) [not null, note: "Active / Expired / Cancelled"]
  payment_status  varchar(15) [not null, note: "Success / Failed / Refunded"]
  auto_renew      boolean [not null, default: true]
}

Table content {
  content_id        int [pk, increment]
  title             varchar(150) [not null]
  content_type      varchar(10) [not null, note: "Movie / Series"]
  release_year      int
  description       text
  maturity_rating   varchar(6) [note: "G / PG / PG-13 / R / TV-14 / TV-MA"]
  original_language varchar(30)
  duration_minutes  int [note: "movies only; NULL for series"]
  imdb_rating       decimal(3,1)
  added_date        date [not null]
}

Table genres {
  genre_id   int [pk, increment]
  genre_name varchar(40) [not null, unique]
}

Table content_genres {
  content_id int [ref: > content.content_id]
  genre_id   int [ref: > genres.genre_id]

  indexes {
    (content_id, genre_id) [pk]
  }
}

Table people {
  person_id   int [pk, increment]
  full_name   varchar(100) [not null]
  birth_date  date
  nationality varchar(50)
}

Table content_cast {
  content_id     int [ref: > content.content_id]
  person_id      int [ref: > people.person_id]
  cast_role      varchar(15) [note: "Actor / Director / Writer / Producer"]
  character_name varchar(80)

  indexes {
    (content_id, person_id, cast_role) [pk]
  }
}

Table watch_history {
  history_id       int [pk, increment]
  user_id          int [not null, ref: > users.user_id]
  content_id       int [not null, ref: > content.content_id]
  watched_at       datetime [not null]
  progress_percent int [not null, note: "0-100"]
  is_completed     boolean [not null]
}

Table reviews {
  review_id   int [pk, increment]
  user_id     int [not null, ref: > users.user_id]
  content_id  int [not null, ref: > content.content_id]
  rating      int [not null, note: "1-10"]
  comment     text
  review_date datetime [not null]

  indexes {
    (user_id, content_id) [unique]
  }
}

Table favorites {
  user_id    int [ref: > users.user_id]
  content_id int [ref: > content.content_id]
  added_date datetime [not null]

  indexes {
    (user_id, content_id) [pk]
  }
}
